@@ -1,4 +1,6 @@
 Changes for 1.6.1.3
+* Abstracting the Stats panels into AbstractStatPanel so that extending Stats panel (and all of its overhead) is no longer necessary for the EconomyPanel, ObjectivePanel, TerritoryDetailPanel, and other panels. (veqryn)
+
 * Changing Tech Stats Panel to use small flag images for column headers instead of the first letter of nation names. (veqryn)
 
 * Fixing bugs with placing constructions in sea zones. Now constructions can only be "produced" by the territory they are going into. (veqryn)
